@@ -1,3 +1,6 @@
+[B]2.0.7[/B]
+- Fixed: show overview
+
 [B]2.0.6[/B]
 - Fixed scraping after API layout changes
 
